--- a/package.json
+++ b/package.json
@@ -10,17 +10,27 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@datepicker-react/styled": "^2.8.4",
     "@reduxjs/toolkit": "^2.2.3",
+    "@syncfusion/ej2-react-schedule": "^25.1.41",
     "axios": "^1.6.8",
     "http-status-codes": "^2.3.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
+    "react-big-calendar": "^1.12.0",
+    "react-datepicker": "^6.9.0",
     "react-dom": "^18.2.0",
+    "react-draggable": "^4.4.6",
+    "react-modal": "^3.16.1",
     "react-redux": "^9.1.1",
     "react-router-dom": "^6.22.3",
+    "react-time-picker": "^7.0.0",
     "redux": "^5.0.1",
-    "sort-by": "^1.2.0"
+    "rsuite": "^5.60.0",
+    "sort-by": "^1.2.0",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
